buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1+', changing: true
        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.0'
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'org.spongepowered.mixin'

group = 'flash'
version = '1.1.4b'
archivesBaseName = 'flashnpcs'

java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.

minecraft {
    mappings channel: 'snapshot', version: '20210309-1.16.5'
    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.

    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run/client')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            arg "-mixin.config=flashnpcs.mixins.json"

            mods {
                flashnpcs {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run/server')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            arg "-mixin.config=flashnpcs.mixins.json"

            mods {
                flashnpcs {
                    source sourceSets.main
                }
            }
        }
    }
}

mixin {
    add sourceSets.main, "flashnpcs.refmap.json"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    minecraft 'net.minecraftforge:forge:1.16.5-36.2.22'

    annotationProcessor 'org.spongepowered:mixin:0.8.2:processor'

    implementation 'org.json:json:20211205'
}

shadowJar {
    dependencies {
        include(dependency("org.json:json:20211205"))
    }

    classifier = ""
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "flashnpcs",
                "Specification-Vendor"    : "FlashHUN",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.version,
                "Implementation-Vendor"   : "FlashHUN",
                "MixinConfigs"            : "flashnpcs.mixins.json",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

repositories {
    mavenCentral()
}

jar.dependsOn shadowJar
jar.enabled = false

jar.finalizedBy('reobfJar')
